deleted file added to html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 
 <head>
+  <style>
+  body {
+    background-color: rgb(173, 230, 182);
+  }
+  </style>
+  </head>
+  <body>
+  
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
@@ -12,7 +20,18 @@
         My Portfolio
     </H1>
     <!-- 
-      Directions:
+<html>
+      <Div>
+        <h1>
+          Darryl Young
+        </h1>
+          <h2> Software Developer</h2>
+          <hr />
+          <p> My <em> Favorite </em> Thing about programming is the ability to make things from a ground level
+          </p>
+          
+            <img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">"
+
         1. Create a DIV element to contain the page content
         2. Inside your DIV, create an H1 tag that contains your name as the text
         3. Below your H1 tag, create an H2 tag that contains the content text "Software Developer"
@@ -33,5 +52,25 @@
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
 </body>
-
+<div>
+  <h1>Darryl Young</h1>
+  <h2>Software Developer</h2>
+  <hr />
+  <p>My <em><strong>Favorite</strong></em> Thing about programming is the abilityt to make things from the ground level</p>
+  <img src="https://images.app.goo.gl/XmwkqHieK4Jx2BAx8.jpg" 
+  alt="Profile Picture Placeholder">
+  <p>
+    Lorem ipsum dolor sit amet, movet vidisse partiendo sea ut, sed ei posidonium signiferumque, tincidunt reprimique eam no. Ei corpora ponderum praesent ius, cum in nibh noster definitionem. Ut utroque imperdiet nam, stet ridens graeci ne sea, ea solum inciderint has. Nec laudem nominati ad, cu posse solet mollis usu. Vim posse disputando consequuntur at. Et sint tantas facilisi vim. At harum exerci lobortis eos, eros homero assentior nam eu. An tation decore equidem vix, at nam omittam sensibus. Eu quas veniam cum, et consequat constituam sit. His cu dicat minim accumsan, et usu consequat intellegam.
+    </p>
+    <h3>My Projects</h3>
+      <ul>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
+      </ul>
+      <h3><strong>Contact Me</strong></h3>
+      <p><strong>Phone:</Strong>202- 555-1234</p>
+      <p>Email :<a href="mailto:Brandi@email.com">brandi@email.com</a></p>
+</div>
+</body>
 </html>
