--- a/index.html
+++ b/index.html
@@ -2,36 +2,26 @@
 <html>
 
 <head>
-  <style>
-  body {
-    background-color: rgb(173, 230, 182);
-  }
-  </style>
-  </head>
-  <body>
-  
+  <link
+    rel="stylesheet"
+    href="./css/styles.css"
+/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>My Portfolio</title>
+    <title>All About Me!</title>
 </head>
 
 <body>
+  <div class="All-About-Me">
+    All About Me!
+  </div>
+  <div class="My-Portfolio">
     <H1>
         My Portfolio
     </H1>
+  </div>
     <!-- 
-<html>
-      <Div>
-        <h1>
-          Darryl Young
-        </h1>
-          <h2> Software Developer</h2>
-          <hr />
-          <p> My <em> Favorite </em> Thing about programming is the ability to make things from a ground level
-          </p>
-          
-            <img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">"
-
+      Directions:
         1. Create a DIV element to contain the page content
         2. Inside your DIV, create an H1 tag that contains your name as the text
         3. Below your H1 tag, create an H2 tag that contains the content text "Software Developer"
@@ -46,31 +36,37 @@
         12. Add another H3 that contains "Contact Me" as text
         13. Create a paragraph that contains a fake phone number, e.g., "Phone: (202) 555-1234"
         14. Create a link tag (<a>) with a direction to mail to a fake email address. This is done by making a regular link, but in the href attribute, put mailto:fake@email.com (this opens up your email program with the TO field already filled out-try it!)
-
         BONUS: Try one of the following ideas if you finish early
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
-</body>
-<div>
-  <h1>Darryl Young</h1>
-  <h2>Software Developer</h2>
-  <hr />
-  <p>My <em><strong>Favorite</strong></em> Thing about programming is the abilityt to make things from the ground level</p>
-  <img src="https://images.app.goo.gl/XmwkqHieK4Jx2BAx8.jpg" 
-  alt="Profile Picture Placeholder">
-  <p>
-    Lorem ipsum dolor sit amet, movet vidisse partiendo sea ut, sed ei posidonium signiferumque, tincidunt reprimique eam no. Ei corpora ponderum praesent ius, cum in nibh noster definitionem. Ut utroque imperdiet nam, stet ridens graeci ne sea, ea solum inciderint has. Nec laudem nominati ad, cu posse solet mollis usu. Vim posse disputando consequuntur at. Et sint tantas facilisi vim. At harum exerci lobortis eos, eros homero assentior nam eu. An tation decore equidem vix, at nam omittam sensibus. Eu quas veniam cum, et consequat constituam sit. His cu dicat minim accumsan, et usu consequat intellegam.
-    </p>
-    <h3>My Projects</h3>
+     <div>
+      <h1>Joanna Hall</h1>
+      <h2>Software Developer</h2>
+      <hr>
+      <p>"My <em>favorite</em> thing about programming is that it makes me feel like Neo!  I am in control of the Matrix!"</p>
+      <img
+      alt="Joanna Hall, The Great!"
+      src="https://www.hellomagazine.com/imagenes/profiles/halle-berry/5705-halle-berry.jpg"
+      >
+      <hr>
+      <h3>About Me!</h3>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      <hr>
+      <h3>My Projects!</h3>
       <ul>
         <li>Project 1</li>
         <li>Project 2</li>
         <li>Project 3</li>
-      </ul>
-      <h3><strong>Contact Me</strong></h3>
-      <p><strong>Phone:</Strong>202- 555-1234</p>
-      <p>Email :<a href="mailto:Brandi@email.com">brandi@email.com</a></p>
-</div>
+     </ul>
+     <hr>
+     <img
+     alt="SuperStar!"
+     src="https://cdn.spacetelescope.org/archives/images/thumb350x/heic0301a.jpg"
+     >
+     <h3>Contact Me!</h3>
+     <p><b>Phone:<b> (202) 555-1234</p>
+     <a href="mailto:joanna.hall@email.com"> <b>Email:<b> Joanna </a>
 </body>
+
 </html>
