--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
      <div>
-      <h1>Joanna Hall</h1>
+      <h1>Darryl Young</h1>
       <h2>Software Developer</h2>
       <hr>
-      <p>"My <em>favorite</em> thing about programming is that it makes me feel like Neo!  I am in control of the Matrix!"</p>
+      <p>"My <em>favorite</em> thing about programming is that I can build things from a ground level!"</p>
       <img
       alt="Profile Picture"
       src="https://images.app.goo.gl/LYnmbm7sCWZFH1Te7"
