--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <hr>
       <p>"My <em>favorite</em> thing about programming is that I can build things from a ground level!"</p>
       <img
-      alt="Profile Picture"
-      src="https://images.app.goo.gl/LYnmbm7sCWZFH1Te7"
+      alt="Darryl Young!"
+      src="https://www.hellomagazine.com/imagenes/profiles/halle-berry/5705-halle-berry.jpg"
       >
       <hr>
       <h3>About Me!</h3>
@@ -61,8 +61,8 @@
      </ul>
      <hr>
      <img
-     alt="placeholder"
-     src="https://www.mercari.com/us/item/m29988681083/?gclsrc=aw.ds&&utm_source=google&utm_medium=cpc&utm_campaign=12877497079&utm_content=t0&adgroup=120335190446&network=g&device=c&merchant_id=126358573&product_id=m29988681083&product_id=338266452850&gclid=Cj0KCQiAjJOQBhCkARIsAEKMtO2IuLU9cnxXX9ZaIC0Icu_TGV8j_-LObIdoTW8_QGUj17ccdlnlCAMaAnjnEALw_wcB"
+     alt="TV"
+     src="https://cdn.spacetelescope.org/archives/images/thumb350x/heic0301a.jpg"
      >
      <h3>Contact Me!</h3>
      <p><b>Phone:<b> (202) 555-1234</p>
